@@ -44,8 +44,8 @@ std::ostream &dbg();
 std::ostream &out();
 
 #define MAGEEC_PREFIX "-- "
-#define MAGEEC_ERR(msg)    mageec::util::dbg() << MAGEEC_PREFIX << "error: " << msg << '\n'
-#define MAGEEC_WARN(msg)   mageec::util::dbg() << MAGEEC_PREFIX << "warning: " << msg << '\n'
+#define MAGEEC_ERR(msg)    mageec::util::dbg() << MAGEEC_PREFIX "error: " << msg << '\n'
+#define MAGEEC_WARN(msg)   mageec::util::dbg() << MAGEEC_PREFIX "warning: " << msg << '\n'
 #define MAGEEC_STATUS(msg) mageec::util::dbg() << MAGEEC_PREFIX << msg << '\n'
 #define MAGEEC_DEBUG(msg)  if (mageec::util::withDebug()) { mageec::util::dbg() << MAGEEC_PREFIX << msg << '\n'; }
 
